# CareerPilot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  career_ops專案說明.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml  test_cake.py
backend/app/: alerts.py  config.py  db.py  fetchers.py  liveness.py  main.py  models.py  scheduler.py  scraper.py  scraper_cake.py  scraper_meetjob.py  scraper_yourator.py
backend/app/routers/: alerts.py  chat.py  cover_letter.py  cv.py  evaluate.py  fetch_url.py  history.py  jobs.py  liveness.py  rag.py  resume.py
backend/tests/: conftest.py  test_alerts_storage.py  test_api_alerts.py  test_api_chat.py  test_api_cover_letter.py  test_api_cv.py  test_api_evaluate.py  test_api_jobs.py  test_fetchers.py  test_scheduler.py  test_scraper.py  test_scraper_cake.py  test_scraper_meetjob.py  test_scraper_yourator.py
docs/superpowers/plans/: 2026-04-19-job-qa-chat.md  2026-04-20-smart-match.md  2026-04-21-cover-letter-bookmark-button.md  2026-04-21-job-content-fetch.md  2026-04-29-cover-letter-greeting-closing.md
frontend/: alerts.html  dashboard.html  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/css/: alerts.css  dashboard.css  style.css
frontend/js/: alerts.js  app.js  dashboard.js  utils.js
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: CVModal.tsx  CheckboxGroup.tsx  DimensionsPanel.tsx  JobChat.tsx  JobModal.tsx  Layout.tsx
frontend/src/hooks/: useBookmarks.ts  useLiveness.ts  useLocalStorage.ts  usePreferences.ts  useTheme.ts
frontend/src/pages/: AlertsPage.tsx  CoverLetterDetailPage.tsx  CoverLetterHistoryPage.tsx  CoverLetterPage.tsx  DashboardPage.tsx  EvaluatePage.tsx  HistoryDetailPage.tsx  HistoryPage.tsx  InterviewPrepPage.tsx  KnowledgeBasePage.tsx  MockInterviewDetailPage.tsx  MockInterviewHistoryPage.tsx  ResumeMatchDetailPage.tsx  ResumeMatchHistoryPage.tsx  ResumeRewriteDetailPage.tsx  ResumeRewriteHistoryPage.tsx  ResumeRewritePage.tsx  SearchPage.tsx  SettingsPage.tsx  SmartMatchPage.tsx
frontend/src/types/: index.ts
