[project]
name = "careerpilot"
version = "1.0.0"
description = "AI 求職助理平台"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.21",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.131.0",
    "lxml>=6.0.2",
    "openai>=1.0.0",
    "pdfplumber>=0.11.9",
    "playwright>=1.58.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "ASYNC"]
ignore = [
    "E501",   # line too long — handled by ruff format
    "B008",   # function calls in default args — FastAPI pattern
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
